<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_select_all" android:title="@string/action_select_all" app:showAsAction="never" />
    <item android:id="@+id/action_compress_selected" android:title="@string/action_compress" app:showAsAction="never" />
    <item android:id="@+id/action_copy_selected" android:title="@string/action_copy" app:showAsAction="always" />
    <item android:id="@+id/action_cut_selected" android:title="@string/action_cut" app:showAsAction="always" />
    <item android:id="@+id/action_delete_selected" android:title="@string/action_delete" app:showAsAction="always" />
    <item android:id="@+id/action_exit_selection" android:title="@string/action_cancel" app:showAsAction="always" />
</menu>
